[package]
name = "poll-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie-signed"] }
tokio = { version="1.42.0" , features = ["full"] }
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_json = "1.0.133"
serde_with = { version = "3.12.0", features = ["chrono"] }
rand = "0.8.5"
sha2 = "0.10.8"
chrono = "0.4.39"
